--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 <body>
 	<br>
-	<div class="container">
+	<div class="container text-center">
 		<h1>Hello World</h1>
 		<p>I'm hosted with GitHub Pages.</p>
 		<p>Welcome to <a href="https://kovspace.com">KovSpace</a></p>
