--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 <body>
-	<br>
-	<div class="container text-center">
+	<br><br><br>
+	<div class="container text-xs-center">
 		<h1>Hello World</h1>
 		<p>I'm hosted with GitHub Pages.</p>
 		<p>Welcome to <a href="https://kovspace.com">KovSpace</a></p>
